src/site/snapshots/ntropy__site__page__tests__a_document_page_pins_its_structure.snap
---
source: src/site/page.rs
expression: document().render()
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Quarterly &lt;Review&gt;</title>
<style>
body { color: red }
</style>
</head>
<body class="document">
<svg hidden><symbol id="icon-tag"/></svg>
<main>
<header class="note-header">
<h1 class="note-title">Quarterly &lt;Review&gt;</h1>
<p class="note-meta"><time class="note-created" datetime="2026-06-24">2026-06-24</time>
<span class="tags"><span class="tag"><svg class="icon" aria-hidden="true"><use href="#icon-tag"/></svg>area/work</span>
<span class="tag"><svg class="icon" aria-hidden="true"><use href="#icon-tag"/></svg>a&amp;b</span>
</span></p>
<dl class="frontmatter">
<dt>status</dt>
<dd><ul><li>draft</li></ul></dd>
</dl>
</header>
<article class="note-body">
<p>Hello <em>there</em></p>
</article>
</main>
</body>
</html>
